@@ -88,3 +88,4 @@ Files in this repository are available under the [MIT license](../license.txt).
 | [RapidJSON](https://github.com/Tencent/rapidjson) | JSON parser | [MIT](http://opensource.org/licenses/MIT) |
 | [subprocess.h](https://github.com/sheredom/subprocess.h) | Command processor | [Unlicense](https://github.com/sheredom/subprocess.h/blob/master/LICENSE) |
 | [c-env-utils](https://github.com/matyalatte/c-env-utils) | Utilities for env info | [MIT](http://opensource.org/licenses/MIT) |
+| [tiny-str-match](https://github.com/matyalatte/tiny-str-match) | String validator | [MIT](http://opensource.org/licenses/MIT) |
