@@ -31,6 +31,7 @@ Examples for component options.
 -   [Default Values](./comp_options/default/):  An option to set default values of components.
 -   [Tooltip](./comp_options/tooltip/): An option to show a message when the mouse cursor is on a component.
 -   [Placeholder](./comp_options/placeholder/): An option to show a message when the text box is empty.
+-   [Validator](./comp_options/validator/): Options to validate input strings before execution.
 -   [Renaming Buttons](./comp_options/button/): An option to rename buttons of path pickers.
 
 ![tooltip](https://github.com/matyalatte/tuw/assets/69258547/8c7244ee-48ce-4492-973c-a3e6c628b8ed)  
@@ -45,6 +46,7 @@ There are more features you can use.
 -   [Cross-platform Support](./other_features/cross_platform): You can make platform specific GUIs.
 -   [Version Checking](./other_features/version_check/): Constraints on the tool version.
 -   [Alternate Spellings](./other_features/alternate_spellings/): Tuw supports multiple spellings for some JSON keys and values.
+-   [Skip Success Message](./other_features/skip_dialog/): You can skip the success dialog.
 
 ![help](https://github.com/matyalatte/tuw/assets/69258547/e408a179-6f9f-4769-ab3d-57f87d392a4f)  
 
